--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -34,6 +34,7 @@ yabai -m rule --add app="^(WeCom)$" space=work
 yabai -m rule --add app="^(QQ音乐|迅雷)$" space=misc
 yabai -m rule --add app="^(kitty)$" space=term
 
+#企业微信·会议
 
 yabai -m rule --add app="^mpv$" manage=off border=off sticky=on layer=above opacity=1.0 grid=8:8:6:0:2:2
 
