--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -18,9 +18,9 @@ patch:
     - punct_translator
     - script_translator
     - table_translator@custom_phrase
-    # librime-lua 输入动态时间和日期
-    - lua_translator@date_translator
-    - lua_translator@week_translator
+    ## librime-lua 输入动态时间和日期
+    #- lua_translator@date_translator
+    #- lua_translator@week_translator
   engine/filters:
     - simplifier
     - uniquifier
@@ -108,7 +108,7 @@ patch:
   # __include: easy_en:/patch
   # easy_en/enable_sentence: false
 # Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
-  __include: grammar:/hant
+  __include: grammar:/hans
 # Rx: BlindingDark/rime-lua-select-character:customize:schema=luna_pinyin
   # __include: lua_select_character:/patch # 需要lua_selector打开本行注释
 
