--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -16,17 +16,14 @@ patch:
       states: [ 。，, ．， ]
   engine/translators:
     - punct_translator
+    - lua_translator@lua_custom_phrase
     - script_translator
-    #- table_translator@custom_phrase
-    ## librime-lua 输入动态时间和日期
-    #- lua_translator@date_translator
-    #- lua_translator@week_translator
+    - lua_translator@date_time_week
   engine/filters:
     - simplifier
     - uniquifier
+    - lua_filter@single_char_first
     - simplifier@emoji_suggestion
-    #- charset_filter@gbk
-    #- single_char_filter
   engine/processors:
     - ascii_composer
     - recognizer
@@ -36,15 +33,19 @@ patch:
     - selector
     - navigator
     - express_editor
+
   emoji_suggestion:
+    # tips: all
     opencc_config: emoji.json
     option_name: emoji_suggestion
-    # tips: all
-  reverse_lookup: {}
+
+  lua_custom_phrase:
+    user_dict: "lua_custom_phrase"
+
 
   #載入朙月拼音擴充詞庫
-  'translator/dictionary': pinyin_dicts
-  'translator/preedit_format': {}
+  translator/dictionary: pinyin_dicts
+  translator/preedit_format: {}
 
 
   # 自定义符号上屏
@@ -110,7 +111,3 @@ patch:
   # easy_en/enable_sentence: false
 # Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
   __include: grammar:/hans
-# Rx: BlindingDark/rime-lua-select-character:customize:schema=luna_pinyin
-  # __include: lua_select_character:/patch # 需要lua_selector打开本行注释
-
-
