--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -12,7 +12,7 @@
 
 #open a floating terminal
 alt - return : \
-               skhd -k "ctrl + alt - i" && \
+               yabai -m window --insert stack && \
                sh -c 'if [ ls ${TMPDIR}Alacritty-*.sock > /dev/null 2>&1 ]; then alacritty msg create-window && sleep 0.03; else open -na /Users/penglei/Applications/Alacritty.app; fi' && \
                skhd -k "alt - t"
 
@@ -113,12 +113,12 @@ alt + shift - 8 : yabai -m window --space  misc && yabai -m space --focus misc
 alt + shift - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
 
 # # focus monitor
-# ctrl + alt - x  : yabai -m display --focus recent
-# ctrl + alt - z  : yabai -m display --focus prev
-# ctrl + alt - c  : yabai -m display --focus next
-# ctrl + alt - 1  : yabai -m display --focus 1
-# ctrl + alt - 2  : yabai -m display --focus 2
-# ctrl + alt - 3  : yabai -m display --focus 3
+# alt + ctrl - x  : yabai -m display --focus recent
+# alt + ctrl - z  : yabai -m display --focus prev
+# alt + ctrl - c  : yabai -m display --focus next
+# alt + ctrl - 1  : yabai -m display --focus 1
+# alt + ctrl - 2  : yabai -m display --focus 2
+# alt + ctrl - 3  : yabai -m display --focus 3
 #
 # # send window to monitor and follow focus
 # ctrl + cmd - x  : yabai -m window --display recent && yabai -m display --focus recent
@@ -136,12 +136,13 @@ alt + shift - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
 alt + shift - a : yabai -m window --resize left:-100:0 --resize right:100:0
 alt + shift - d : yabai -m window --resize left:100:0 --resize right:-100:0
 
-# set insertion point in focused container
-alt + ctrl - h : yabai -m window --insert west
-alt + ctrl - j : yabai -m window --insert south
-alt + ctrl - k : yabai -m window --insert north
-alt + ctrl - l : yabai -m window --insert east
-alt + ctrl - i : yabai -m window --insert stack
+## set insertion point in focused container
+cmd - i : yabai -m window --insert stack  #west,east,north,south
+
+alt + ctrl - h : yabai -m window --warp west
+alt + ctrl - j : yabai -m window --warp south
+alt + ctrl - k : yabai -m window --warp north
+alt + ctrl - l : yabai -m window --warp east
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
