--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -3,7 +3,7 @@ patch:
   switches:
     - name: ascii_mode
       reset: 0
-      states: [ 中文, 西文 ]
+      states: [ 中, EN ]
     - name: full_shape
       states: [ 半角, 全角 ]
     - name: show_emoji
