--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -41,13 +41,7 @@ patch:
     #tips: all Emoji 显示注释
 
   lua_custom_phrase:
-    user_dict: "lua_custom_phrase"
-
-
-  #載入朙月拼音擴充詞庫
-  translator/dictionary: pinyin_dicts
-  translator/preedit_format: {}
-
+    user_dict: "custom_phrase"
 
   # 自定义符号上屏
   punctuator:
