--- a/files/rime/pinyin_dicts.dict.yaml
+++ b/files/rime/pinyin_dicts.dict.yaml
@@ -8,13 +8,13 @@ sort: by_weight                 # by_weight（按词频高低排序）或 origin
 use_preset_vocabulary: false    # true 或 false，选择是否导入预设词汇表【八股文】 (essay.txt)
 
 import_tables:
-  - pinyin_simp_mini
-  - luna_pinyin.chengyusuyu
-  - luna_pinyin.sijixingzhenquhuadimingciku
-  - luna_pinyin.jisuanjicihuidaquan
-  - luna_pinyin.wangluoliuxingxinci
-  - luna_pinyin.kaifadashenzhuanyongciku
-  - luna_pinyin.zhongguolishicihuidaquan
+  - dicts_cn/pinyin_simp_mini
+  - dicts_cn/luna_pinyin.chengyusuyu
+  - dicts_cn/luna_pinyin.sijixingzhenquhuadimingciku
+  - dicts_cn/luna_pinyin.jisuanjicihuidaquan
+  - dicts_cn/luna_pinyin.wangluoliuxingxinci
+  - dicts_cn/luna_pinyin.kaifadashenzhuanyongciku
+  - dicts_cn/luna_pinyin.zhongguolishicihuidaquan
 
-  - luna_pinyin.my-symbols
+  - dicts_cn/luna_pinyin.my-symbols
 # - luna_pinyin.kaomoji
