--- a/files/rime/installation.yaml
+++ b/files/rime/installation.yaml
@@ -2,6 +2,6 @@ distribution_code_name: Squirrel
 distribution_name: "鼠鬚管"
 distribution_version: 0.16.1
 install_time: "Fri Feb  3 00:23:38 2023"
-installation_id: "892c00a6-03be-41f9-9780-5e953c399097"
+installation_id: "penglei-m1pro"
 rime_version: 1.8.4
 sync_dir: /Users/penglei/Data/rime-inputmethods/iCloud-Sync-Rime
