--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -6,7 +6,9 @@ patch:
       states: [ 中, EN ]
     - name: show_emoji
       reset: 1
-      states: [ "🈚️️\uFE0E", "🈶️️\uFE0F" ]
+      states: [ "🚫", "😄" ]
+     #states: [ "🚫", "🈶️️" ]
+     #states: [ "🈚️️", "🈶️️" ]
 
     #https://github.com/rime/home/wiki/CustomizationGuide
     - name: full_shape
