--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -44,48 +44,13 @@ patch:
 
   # 自定义符号上屏
   punctuator:
-    import_preset: symbols
-    symbols:
-      "/fs": [½, ‰, ¼, ⅓, ⅔, ¾, ⅒ ]
-      "/xh": [ ＊, ×, ✱, ★, ☆, ✩, ✧, ❋, ❊, ❉, ❈, ❅, ✿, ✲]
-      "/dq": [🌍,🌎,🌏,🌐,🌑,🌒,🌓,🌔,🌕,🌖,🌗,🌘]
-      "/sg": [🍇,🍉,🍌,🍍,🍎,🍏,🍑,🍒,🍓,🍗,🍦,🎂,🍺,🍻]
-      "/dw": [🙈,🐵,🐈,🐷,🐨,🐼,🐾,🐔,🐬,🐠,🦋]
-      "/bq": [😀,😁,😂,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,😗]
-      "/ss": [💪,👈,👉,👆,👇,✋,👌,👍,👎,✊,👊,👋,👏,👐]
-    half_shape:
-      ',' : [，, ','] #{ commit: ， }
-      '.' : [。,'.']  #{ commit: 。 }
-      '<' : [《, '<', 〈, «, ‹ ]
-      '>' : [》, '>', 〉, », › ]
-      '/' : [、, '/', ／, ÷ ]
-      '?' : [？, '?'] #{ commit: ？ }
-      ';' : [；, ';'] #{ commit: ； }
-      ':' : [：, ':'] #{ commit: ： }
-      '''': ['''', '‘', '’'] #{ pair: [ '‘', '’' ] }
-      '"' : ['"', '“', '”' ] #{ pair: [ '“', '”' ] }
-      '\' : [、, '\', ＼]
-      '|' : [・, '|', ｜, '§', '¦' ]
-      '`' : ['`', ｀]
-      '~' : ['~', 〜, ～, 〰 ]
-      '!' : [！, '!'] #{ commit: ！ }
-      '@' : ['@', ＠]
-      '#' : '#'
-      '%' : ['%', ％, '°', '℃' ]
-      '$' : ['$', ￥, '€', '£', '¥', '¢', '¤' ]
-      '^' : ['^', '…', '……']  #{ commit: …… }
-      '&' : '&'
-      '*' : ['*', ＊, ・, ·, ×, ※, ❂ ]
-      '(' : ['(',（]
-      ')' : [')', ）]
-      '-' : '-'
-      '_' : ['_', ——]
-      '+' : '+'
-      '=' : '='
-      '[' : [「, '[', 【, 〔, ［]
-      ']' : [」, ']', 】, 〕, ］]
-      '{' : [『, '{', 〖, ｛]
-      '}' : [』, '}', 〗, ｝]
+    # __include: punctuation:/     # 从应用目录引入预设的 punctuation.yaml
+    import_preset: symbols         # 从引入预设的 symbols.yaml，配置目录没有则从应用目录查找
+
+    ## 也可以直接在这里配置
+    # half_shape:
+    # full_shape
+    # symbols:
 
   recognizer/patterns/punct: "^/([0-9]0?|[A-Za-z]+)$"
   
