--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -92,6 +92,10 @@ alt - 1 : yabai -m space --focus  1
 alt - 2 : yabai -m space --focus  2
 alt - 3 : yabai -m space --focus  3
 alt - 4 : yabai -m space --focus  4
+hyper - 1 : yabai -m space --focus  1
+hyper - 2 : yabai -m space --focus  2
+hyper - 3 : yabai -m space --focus  3
+hyper - 4 : yabai -m space --focus  4
 alt - 7 : yabai -m space --focus  5
 alt - 8 : yabai -m space --focus  misc
 alt - 9 : yabai -m space --focus  adhoc
@@ -136,10 +140,14 @@ alt + shift - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
 # balance size of windows
 alt + shift - r : yabai -m space --balance
 #resize window
-alt + shift - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
-alt + shift - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
-alt + shift - a : yabai -m window --resize left:-100:0 --resize right:100:0
-alt + shift - d : yabai -m window --resize left:100:0 --resize right:-100:0
+#alt + shift - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
+#alt + shift - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
+#alt + shift - a : yabai -m window --resize left:-100:0 --resize right:100:0
+#alt + shift - d : yabai -m window --resize left:100:0 --resize right:-100:0
+hyper - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
+hyper - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
+hyper - a : yabai -m window --resize left:-100:0 --resize right:100:0
+hyper - d : yabai -m window --resize left:100:0 --resize right:-100:0
 
 ## set insertion point in focused container
 cmd - i : yabai -m window --insert stack  #west,east,north,south
@@ -170,7 +178,7 @@ alt - m : yabai -m window --toggle zoom-fullscreen && sketchybar -m --trigger wi
 # toggle window native fullscreen
 alt + shift - m : yabai -m window --toggle native-fullscreen
 
-alt + shift - f : sh -c 'config="off"; f="$HOME/.yabai.config.focus_follows_mouse"; \
+alt + shift - f : sh -c 'config="autoraise"; f="$HOME/.yabai.config.focus_follows_mouse"; \
                   if [ "$(cat $f)" == "off" ]; then config="autoraise"; fi; \
                   yabai -m config focus_follows_mouse "$config" && printf "$config" > $f'
 
