disable sketchybar topmost

--- a/files/dotfiles/.sketchybarrc
+++ b/files/dotfiles/.sketchybarrc
@@ -23,7 +23,7 @@ sketchybar -m --add event window_focus        \
 sketchybar --bar height=32        \
                  blur_radius=50   \
                  position=bottom  \
-                 topmost=on       \
+                 topmost=off      \
                  sticky=on        \
                  padding_left=10  \
                  padding_right=10 \
