--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -86,8 +86,8 @@ alt + shift - right  : yabai -m window --grid 1:2:1:0:1:1
 
 # fast focus desktop
 alt - backspace : yabai -m space --focus recent
-alt - left  : yabai -m space --focus prev
-alt - right : yabai -m space --focus next
+alt - left  : yabai -m space --focus $(yabai -m query --spaces --space|jq -r 'if .index == 1 then 9 else "prev" end')
+alt - right : yabai -m space --focus $(yabai -m query --spaces --space|jq -r 'if .index == 9 then 1 else "next" end')
 alt - 1 : yabai -m space --focus  work
 alt - 2 : yabai -m space --focus  email
 alt - 3 : yabai -m space --focus  editor
@@ -209,3 +209,15 @@ f13: skhd -k "shift + cmd - 4" # Screen Capture: copy screen of selected area to
 
 hyper - b: sketchybar --bar topmost="$(sketchybar --query bar | jq -r 'if .topmost == "on" then "off" else "on" end')"
 
+# h [
+#   "AltTab" : skhd -k "left"
+# ]
+# j [
+#   "AltTab" : skhd -k "down"
+# ]
+# k [
+#   "AltTab" : skhd -k "up"
+# ]
+# l [
+#   "AltTab" : skhd -k "right"
+# ]
