--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -31,7 +31,7 @@ yabai -m rule --add app="^(`cat $HOME/.yabai.unmanaged.apps | grep '^' | head -c
 yabai -m rule --add app="^(Snipaste|EuDic)$" sticky=on layer=above manage=off
 yabai -m rule --add title="^(Finder Preferences)$" layer=above manage=off
 
-yabai -m rule --add app="^(Safari|Google Chrome|Notes|Logseq)$" space=viewer
+yabai -m rule --add app="^(Safari|Google Chrome|Notes)$" space=viewer
 yabai -m rule --add app="^(Telegram|WeChat)$" space=social
 yabai -m rule --add app="^WeChat$" -add title!="^WeChat\\s*\\(Chats\\)\\s*$" manage=off
 yabai -m rule --add app="^(WeCom)$" space=work
