--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -15,7 +15,7 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
 #需要先手动创建足够的namespace(多次执行 yabai -m space --create)
 
-yabai -m space 1 --label work   #work
+yabai -m space 1 --label work #work
 yabai -m space 2 --label email
 yabai -m space 3 --label editor #jetbrains, vscode...
 yabai -m space 4 --label viewer #chrome,safari,koodo,logseq..
@@ -26,9 +26,9 @@ yabai -m space 8 --label misc
 yabai -m space 9 --label adhoc
 
 # apps unmanaged (ignore)
-yabai -m rule --add app="^(`cat $HOME/.yabai.unmanaged.apps | grep '^' | head -c-1 - | tr '\n' '|'`)$" manage=off
+yabai -m rule --add app="^($(cat $HOME/.yabai.unmanaged.apps | grep '^' | head -c-1 - | tr '\n' '|'))$" manage=off
 
-yabai -m rule --add app="^(Snipaste|EuDic)$" sticky=on layer=above manage=off
+yabai -m rule --add app="^(Snipaste)$" sticky=on layer=above manage=off
 yabai -m rule --add title="^(Finder Preferences)$" layer=above manage=off
 
 yabai -m rule --add app="^(Safari|Google Chrome|Notes)$" space=viewer
@@ -89,7 +89,6 @@ yabai -m signal --add event=window_focused action="sketchybar -m --trigger windo
 yabai -m signal --add event=window_title_changed action="sketchybar -m --trigger title_change &> /dev/null"
 yabai -m signal --add event=space_changed action="sketchybar -m --trigger space_change &> /dev/null"
 yabai -m signal --add event=window_resized action="sketchybar -m --trigger window_resize &> /dev/null"
-
 
 echo "yabai configuration loaded.."
 
