--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -15,14 +15,14 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
 #需要先手动创建足够的namespace(多次执行 yabai -m space --create)
 
-yabai -m space 1 --label work #work
-yabai -m space 2 --label email
+yabai -m space 1 --label work   #work
+yabai -m space 2 --label term   #alacritty
 yabai -m space 3 --label editor #jetbrains, vscode...
-yabai -m space 4 --label viewer #chrome,safari,koodo,logseq..
+yabai -m space 4 --label misc
 yabai -m space 5 --label social #telegram,wechat...
-yabai -m space 6 --label term   #alacritty
+yabai -m space 6 --label email
 yabai -m space 7 --label relax
-yabai -m space 8 --label misc
+yabai -m space 8 --label viewer #chrome,safari,koodo,logseq..
 yabai -m space 9 --label adhoc
 
 # apps unmanaged (ignore)
@@ -31,7 +31,7 @@ yabai -m rule --add app="^($(cat $HOME/.yabai.unmanaged.apps | grep '^' | head -
 yabai -m rule --add app="^(Snipaste)$" sticky=on layer=above manage=off
 yabai -m rule --add title="^(Finder Preferences)$" layer=above manage=off
 
-yabai -m rule --add app="^(Safari|Google Chrome|Notes)$" space=viewer
+yabai -m rule --add app="^(Safari|Notes|Google Chrome)$" space=viewer
 yabai -m rule --add app="^(Telegram|WeChat)$" space=social
 yabai -m rule --add app="^WeChat$" --add title!="^WeChat\\s*\\(Chats\\)\\s*$" manage=off
 yabai -m rule --add app="^(WeCom)$" space=work
