--- a/stuff/alfred/Alfred.alfredpreferences/preferences/features/terminal/prefs.plist
+++ b/stuff/alfred/Alfred.alfredpreferences/preferences/features/terminal/prefs.plist
@@ -6,7 +6,7 @@
 	<integer>1</integer>
 	<key>custom</key>
 	<string>on alfred_script(q)
-	tell application "Alacritty"
+	tell application "Terminal"
 		activate
 		do script q
 	end tell
