feat: support forward gpg socket per ssh session

--- a/stuff/alfred/Alfred.alfredpreferences/workflows/user.workflow.4C8B5E5E-F35C-4538-96EA-1340E6856033/info.plist
+++ b/stuff/alfred/Alfred.alfredpreferences/workflows/user.workflow.4C8B5E5E-F35C-4538-96EA-1340E6856033/info.plist
@@ -487,9 +487,10 @@ fi
 
 if [[ "${suspendable}" -eq 1 ]]
 then
-  nohup tart run --suspendable "${1}" $run_opts &amp;
+  #tart run --suspendable --dir /Users/penglei/Data "${1}" $run_opts
+  tart run "${1}" --dir /Users/penglei/Data $run_opts
 else
-  nohup tart run "${1}" $run_opts &amp;
+  tart run "${1}" --dir /Users/penglei/Data $run_opts
 fi</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
