change input method to ascii mode for rio

--- a/files/rime/squirrel.custom.yaml
+++ b/files/rime/squirrel.custom.yaml
@@ -1,12 +1,15 @@
 patch:
-  show_notifications_when: appropriate # 状态通知，可设为全开（always）全关（never）  
-  # 特定App默认中/英文输入   
+  show_notifications_when: appropriate # 状态通知，可设为全开（always）全关（never）
+  # 特定App默认中/英文输入
   app_options:
     org.alacritty:
       ascii_mode: true # true默认英文,false默认中文
       vim_mode: true # 当按下 Esc 的时候会自动将 Rime 切换成英文输入法
-      #no_inline: true      # 「输入码」是否直接显示在候选框上面，而不是显示在屏幕上
-      #ascii_punct: true    # 中文状态输出英文标点(半角) 
+      #no_inline: true # 「输入码」是否直接显示在候选框上面，而不是显示在屏幕上
+      #ascii_punct: true # 中文状态输出英文标点(半角)
+    com.raphaelamorim.rio:
+      ascii_mode: true
+      vim_mode: true
     net.kovidgoyal.kitty:
       ascii_mode: true
     com.apple.Terminal:
@@ -82,7 +85,7 @@ patch:
       hilited_corner_radius: 5 # 高亮圆角
       line_spacing: 10 # 行间距(适用于竖排)
       border_height: 4 # 窗口上下高度，大于圆角半径才生效
-      border_width: 4 # 窗口左右宽度，大于圆角半径才生效 
+      border_width: 4 # 窗口左右宽度，大于圆角半径才生效
       font_face: "PingFangSC" # 候选词字体
       font_point: 16 # 候选字大小
       label_font_point: 13 # 候选编号大小
@@ -167,11 +170,11 @@ patch:
       name: 幽能
       horizontal: true # true横排，false竖排
       candidate_format: "%c %@ " # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
-      corner_radius: 5 # 窗口圆角 
+      corner_radius: 5 # 窗口圆角
       font_point: 16 # 候选文字大小
       label_font_point: 14 # 候选编号大小
       line_spacing: 10 # 行间距(适用于竖排)
-      font_face: "PingFangSC-Regular,HanaMinB" # 候选词字体  
+      font_face: "PingFangSC-Regular,HanaMinB" # 候选词字体
       text_color: 0xc2c2c2 # 拼音行文字颜色
       back_color: 0x444444 # 候选条背景色，24位色值，16进制，BGR顺序
       candidate_text_color: 0xeeeeee # 预选项文字颜色
@@ -213,7 +216,7 @@ patch:
       name: 日光石
       horizontal: true # true横排，false竖排
       candidate_format: "%c %@ " # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
-      corner_radius: 6 # 窗口圆角 
+      corner_radius: 6 # 窗口圆角
       font_point: 16 # 候选文字大小
       label_font_point: 15 # 候选编号大小
       line_spacing: 10 # 行间距(适用于竖排)
@@ -227,12 +230,12 @@ patch:
       hilited_candidate_label_color: 0xfafafa # 第一候选项编号颜色
       hilited_candidate_back_color: 0x8236d3 # 候选文字背景色
       hilited_candidate_text_color: 0xffffff # 第一候选项文字颜色
-      hilited_comment_text_color: 0x362b00 # 注解文字高亮  
+      hilited_comment_text_color: 0x362b00 # 注解文字高亮
     solarized_dark:
       name: 夜光石
       horizontal: true # true横排，false竖排
       candidate_format: "%c %@ " # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
-      corner_radius: 6 # 窗口圆角 
+      corner_radius: 6 # 窗口圆角
       font_point: 16 # 候选文字大小
       label_font_point: 15 # 候选编号大小
       line_spacing: 10 # 行间距(适用于竖排)
@@ -248,7 +251,7 @@ patch:
       hilited_candidate_label_color: 0x2566C6 # 第一候选项编号颜色
       hilited_candidate_back_color: 0xD7E8ED # 候选文字背景色
       hilited_candidate_text_color: 0x3942CB # 第一候选项文字颜色
-      hilited_comment_text_color: 0x8144C2 # 注解文字高亮         
+      hilited_comment_text_color: 0x8144C2 # 注解文字高亮
     apathy:
       name: 冷漠
       horizontal: true # true横排，false竖排
@@ -281,7 +284,7 @@ patch:
       hilited_text_color: 0x000000 # 高亮拼音 (需要开启内嵌编码)
       hilited_back_color: 0xFFFFFF # 第一候选项背景背景色
       hilited_candidate_text_color: 0xffffff # 第一候选项文字颜色
-      hilited_candidate_back_color: 0xCE7539 # 候选文字背景色 
+      hilited_candidate_back_color: 0xCE7539 # 候选文字背景色
       comment_text_color: 0x6D6D6D # 拼音等提示文字颜色
       hilited_comment_text_color: 0xEBC6B0 # 注解文字高亮
       hilited_candidate_label_color: 0xfafafa # 第一候选项编号颜色
