--- a/chezmoi_dot_root/dot_config/kitty/kitty.conf
+++ b/chezmoi_dot_root/dot_config/kitty/kitty.conf
@@ -19,6 +19,16 @@ allow_remote_control yes
 confirm_os_window_close 0
 macos_quit_when_last_window_closed yes
 
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+
 ######### theme ##########
 
 ## name:     Catppuccin Kitty Macchiato
