--- a/stuff/alfred/Alfred.alfredpreferences/preferences/workflows/prefs.plist
+++ b/stuff/alfred/Alfred.alfredpreferences/preferences/workflows/prefs.plist
@@ -6,5 +6,7 @@
 	<string>mouse.penglei.ybyte.org</string>
 	<key>defaultCreatedBy</key>
 	<string>penglei</string>
+	<key>showCanvasHints</key>
+	<false/>
 </dict>
 </plist>
