--- a/nixos/ganger/network/sing-box/templates/config.json
+++ b/nixos/ganger/network/sing-box/templates/config.json
@@ -95,9 +95,38 @@
     },
     {
       "listen": "127.0.0.1",
+      "listen_port": 23490,
+      "type": "mixed"
+    },
+    {
+      "listen": "127.0.0.1",
       "listen_port": 29753,
       "network": "udp",
       "tag": "in-dnsserver(127.0.0.1)",
+      "type": "direct"
+    },
+    {
+      "listen": "::1",
+      "listen_port": 21012,
+      "network": "tcp",
+      "type": "tproxy"
+    },
+    {
+      "listen": "::1",
+      "listen_port": 21012,
+      "network": "udp",
+      "type": "tproxy"
+    },
+    {
+      "listen": "::1",
+      "listen_port": 23490,
+      "type": "mixed"
+    },
+    {
+      "listen": "::1",
+      "listen_port": 29753,
+      "network": "udp",
+      "tag": "in-dnsserver(::1)",
       "type": "direct"
     }
   ],
@@ -144,7 +173,7 @@
     {
       "domain_resolver": {
         "rewrite_ttl": 60,
-        "server": "dns-internal"
+        "server": "dns-internal-ipv4"
       },
       "server": "example.org",
       "server_port": 2080,
